Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
/* ... */
@media screen and/*!*/(-webkit-min-device-pixel-ratio:0){ 
	select {
		height: 20px !important;
		margin-top: 0px !important;
		text-indent: 0px !important;
	}
}
@media(-webkit-min-device-pixel-ratio:0) {
	select {
		height: 20px !important;
		margin-top: 0px !important;
		text-indent: 0px !important;
	}
}

select.sheet-select-no-arrow-2 {
	padding-right: 2px;
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
}


@media screen and (-webkit-min-device-pixel-ratio:0){ 
	select.sheet-select-no-arrow-2 {
		height: 21px !important;
		margin-top: 0px !important;
		text-indent: 0px !important;
	}
}
@media screen and/*!*/(-webkit-min-device-pixel-ratio:0){ 
	select.sheet-select-no-arrow-2 {
		height: 21px !important;
		margin-top: 0px !important;
		text-indent: 0px !important;
	}
}
@media(-webkit-min-device-pixel-ratio:0) {
	select.sheet-select-no-arrow-2 {
		height: 21px !important;
		margin-top: 0px !important;
		text-indent: 0px !important;
	}
}

/* === TEXTAREAS === */
textarea {
	height: 150px;
}

.sheet-fluid-textarea {
	height: 100%;
	resize: none;
}
.sheet-xs-textarea {
	height: 19px;

	vertical-align:middle;
}
.sheet-xs-textarea-talents {
	height: 21px;

	vertical-align:middle;
}
.sheet-small-textarea {
	height: 50px;
	resize: none;
}
.sheet-medium-textarea {
	height: 100px;
	resize: none;
}
.sheet-large-textarea {
	height: 300px;
	resize: none;
}
.sheet-textarea-resize {
	resize: vertical;
}
.sheet-xs-textarea-resize {
	height: 19px;
	min-height: 19px;
	resize: vertical;
}
.sheet-small-textarea-resize {
	height: 50px;
	min-height: 50px;
	resize: vertical;
}
@media screen and (-webkit-min-device-pixel-ratio:0){ 
    .sheet-xs-textarea {
    	height: 19px;
    }
}

/* === FONTS === */
.sheet-bold,
.sheet-check-total,
.sheet-skill-total {
	font-weight: bold;
}


/* === TEMP === */
.sheet-ability-name {
	font-size: 9px;
	text-transform: uppercase;
	line-height: 100%;
	font-weight: bold;
	margin-top: 3px;
	margin-bottom: 5px;
}
.sheet-initiative input[type=number].sheet-initiative-total {
	font-weight: bold;
	font-size: 14px;
}
.sheet-initiative .sheet-wrap-box-title {
	font-size: 8px;
}


/* Tweak repeating section buttons so they have a bottom margin and dont overflow when in edit mode. */
div[class^="repcontrol"] {
	margin-bottom: 5px;
}
div[class="repcontainer editmode"] ~ div[class^="repcontrol"] button[class="btn repcontrol_add"] {
	display: inline-block!important;
	visibility: hidden;
}

/* Main Sheet Tabs */
div.sheet-overall-wrapper div[class^="sheet-section"] {
	display: none !important;
}
input.sheet-tab-page-core:checked ~ div.sheet-section-core,
input.sheet-tab-page-skills:checked ~ div.sheet-section-skills,
input.sheet-tab-page-talents:checked ~ div.sheet-section-talents,
input.sheet-tab-page-background:checked ~ div.sheet-section-background,
input.sheet-tab-page-career:checked ~ div.sheet-section-career,
input.sheet-tab-page-weapons:checked ~ div.sheet-section-weapons,
input.sheet-tab-page-actions:checked ~ div.sheet-section-actions,
input.sheet-tab-page-spellbook:checked ~ div.sheet-section-spellbook,
input.sheet-tab-page-armor:checked ~ div.sheet-section-armor,
input.sheet-tab-page-inventory:checked ~ div.sheet-section-inventory,
input.sheet-tab-page-xp:checked ~ div.sheet-section-xp,
input.sheet-tab-page-settings:checked ~ div.sheet-section-settings,
input.sheet-tab-page-npc:checked ~ div.sheet-section-npc {
	display: block !important;
}

input[class*="sheet-tab"] {
	cursor: pointer;
	position: relative;
	opacity: 0;
	z-index: 9999;
}

span[class*="sheet-tab"] {
	display: inline-block;
	position: relative;
	font-size: 16px;
	color: black;
	cursor: pointer;
	font-weight: normal;
    line-height: -5px ;
    font-family: 'WH font';
	text-align: center;
	border-radius: 5px 5px 1px 1px;
	text-shadow:none;
	padding-top: 3px;
}

span[class*="sheet-tab-npc"] {
	color: white;
	font-size: 7px;
	border-radius: 4px 4px 4px 4px;
}

span[class*="sheet-tab-inventory"] {
	color: white;
	border-radius: 4px 4px 4px 4px;
	line-height: 10px;
}

span[class*="sheet-tab-container"] {
	color: black;
	border-radius: 4px 4px 4px 4px;
	line-height: 10px;
}
span[class*="sheet-tab-spell-page"] {
	color: white;
	border-radius: 4px 4px 4px 4px;
	line-height: 10px;
}

input[class*="sheet-tab-page"],
span[class*="sheet-tab-page"] {
	border-top: 1px solid #b8b8b8;
	border-left: 1px solid #b8b8b8;
	border-right: 1px solid #b8b8b8;
	border-bottom: 1px solid #b8b8b8;
	text-shadow:none;
	width: 56px;
	height: 28px;
}

input[class*="sheet-tab-page"]:focus,
span[class*="sheet-tab-page"]:focus {
	border-top: 1px solid var(--bdc);
	border-left: 1px solid var(--bdc);
	border-right: 1px solid var(--bdc);
	border-bottom: 0px solid var(--bdc);
	text-shadow:none;
}


span[class*="sheet-tab-page"] {
	background-color: transparent;
	margin-left: -82px;	
	background-image: var(--bgi);
}

input.sheet-tab-page-core,
span.sheet-tab-page-core {
	width: 92px;
}
span.sheet-tab-page-core {
	margin-left: -93px;
}
input.sheet-tab-page-skills,
span.sheet-tab-page-skills {
	width: 62px;
}
span.sheet-tab-page-skills {
	margin-left: -68px;	
}
input.sheet-tab-page-talents,
span.sheet-tab-page-talents {
	width: 70px;
}
span.sheet-tab-page-talents {
	margin-left: -77px;
}
input.sheet-tab-page-weapons,
span.sheet-tab-page-weapons {
	width: 82px;
}
span.sheet-tab-page-weapons {
	margin-left: -88px;
}
input.sheet-tab-page-armor,
span.sheet-tab-page-armor {
	width: 68px;
}
span.sheet-tab-page-armor {
	margin-left: -75px;
}
input.sheet-tab-page-spellbook,
span.sheet-tab-page-spellbook {
	width: 91px;
}
span.sheet-tab-page-spellbook {
	margin-left: -97px;	
}
input.sheet-tab-page-inventory,
span.sheet-tab-page-inventory {
	width: 90px;
}
span.sheet-tab-page-inventory {
	margin-left: -97px;
}
input.sheet-tab-page-background,
span.sheet-tab-page-background {
	width: 103px;
}
span.sheet-tab-page-background {
	margin-left: -109px;
}
input.sheet-tab-page-xp,
span.sheet-tab-page-xp {
	width: 40px;
}
/* ... */

